--- a/SistemaEscola/src/br/sistemaescola/views/AlunoJInternalFrame.form
+++ b/SistemaEscola/src/br/sistemaescola/views/AlunoJInternalFrame.form
@@ -452,7 +452,7 @@
                       <EmptySpace min="-2" pref="66" max="-2" attributes="0"/>
                       <Component id="jLabel9" min="-2" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="nTextField" min="-2" pref="38" max="-2" attributes="0"/>
+                      <Component id="numeroCasaJTextField" min="-2" pref="38" max="-2" attributes="0"/>
                       <EmptySpace pref="212" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -479,7 +479,7 @@
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="ruaTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="nTextField" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="numeroCasaJTextField" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel9" alignment="3" min="-2" pref="14" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace pref="17" max="32767" attributes="0"/>
@@ -520,9 +520,9 @@
             </Component>
             <Component class="javax.swing.JTextField" name="ruaTextField">
             </Component>
-            <Component class="javax.swing.JTextField" name="nTextField">
+            <Component class="javax.swing.JTextField" name="numeroCasaJTextField">
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="nTextFieldActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="numeroCasaJTextFieldActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JComboBox" name="estadoJComboBox">
