--- a/SistemaEscola/src/br/sistemaescola/views/CursoJInternalFrame.form
+++ b/SistemaEscola/src/br/sistemaescola/views/CursoJInternalFrame.form
@@ -398,6 +398,9 @@
                 </Property>
                 <Property name="toolTipText" type="java.lang.String" value=""/>
               </Properties>
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="jListResultado.addListSelectionListener(cursoListSelectionListener);"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
